v1.0.0/modules/schema/pages/class/EnvironmentalCodedValue.adoc
= `EnvironmentalCodedValue`
:toclevels: 4


+++An environmental value described using a coded value. A triplicate of enumerated values representing intensity, coverage, type of weather is used. These may be concatenated into the string value.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EnvironmentalCodedValue`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/IOPoint.adoc[`IOPoint`]
*** xref::class/MeasurementValue.adoc[`MeasurementValue`]
**** xref::class/StringMeasurementValue.adoc[`StringMeasurementValue`]
***** *`EnvironmentalCodedValue`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
EnvironmentalCodedValue {
  style {
    fill: "#fffbef"
    shadow: true
  }
}





StringMeasurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





RemoteSource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MeasurementValueQuality {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MeasurementValueSource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CalculationMethodHierarchy {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProcedureDataSet {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OldPerson {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProvidedBilateralPoint {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



IOPointSource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





EnvironmentalCodedValue -> StringMeasurement: StringMeasurement



EnvironmentalCodedValue -> RemoteSource: RemoteSource


EnvironmentalCodedValue -> MeasurementValueQuality: MeasurementValueQuality


EnvironmentalCodedValue -> MeasurementValueSource: MeasurementValueSource


EnvironmentalCodedValue -> CalculationMethodHierarchy: CalculationMethodHierarchy


EnvironmentalCodedValue -> ProcedureDataSet: ProcedureDataSet


EnvironmentalCodedValue -> OldPerson: ErpPerson


EnvironmentalCodedValue -> ProvidedBilateralPoint: BilateralToIOPoint


EnvironmentalCodedValue -> IOPointSource: IOPointSource


EnvironmentalCodedValue -> DiagramObject: DiagramObjects


EnvironmentalCodedValue -> InstanceSet: InstanceSet


EnvironmentalCodedValue -> Name: Names


EnvironmentalCodedValue -> ChangeSetMember: PropertiesCIMDataObject


EnvironmentalCodedValue -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<MeasurementValueSource,`MeasurementValueSource`>>
| 1
| xref::class/MeasurementValueSource.adoc[`MeasurementValueSource`]
| +++A reference to the type of source that updates the MeasurementValue, e.g. SCADA, CCLink, manual, etc. User conventions for the names of sources are contained in the introduction to IEC 61970-301.+++

| <<StringMeasurement,`StringMeasurement`>>
| 1
| xref::class/StringMeasurement.adoc[`StringMeasurement`]
| +++Measurement to which this value is connected.+++

| <<coverageKind,`coverageKind`>>
| 0..1
| xref::enumeration/CoverageCodeKind.adoc[`CoverageCodeKind`]
| +++Code representing the coverage of the weather condition.+++

| <<intensityKind,`intensityKind`>>
| 0..1
| xref::enumeration/IntensityCodeKind.adoc[`IntensityCodeKind`]
| +++Code representing the intensity of the weather condition.+++

| <<probabilityPercent,`probabilityPercent`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Probability of weather condition occurring during the time interval expressed as a percentage. Applicable only when weather condition is related to a forecast (not an observation).+++

| <<weatherKind,`weatherKind`>>
| 0..1
| xref::enumeration/WeatherCodeKind.adoc[`WeatherCodeKind`]
| +++Code representing the type of weather condition.+++

| <<CalculationMethodHierarchy,`CalculationMethodHierarchy`>>
| 0..1
| xref::class/CalculationMethodHierarchy.adoc[`CalculationMethodHierarchy`]
| n/a

| <<ErpPerson,`ErpPerson`>>
| 0..1
| xref::class/OldPerson.adoc[`OldPerson`]
| n/a

| <<IOPointSource,`IOPointSource`>>
| 0..1
| xref::class/IOPointSource.adoc[`IOPointSource`]
| +++Local merasurement value source for an ICCP point.+++

| <<MeasurementValueQuality,`MeasurementValueQuality`>>
| 0..1
| xref::class/MeasurementValueQuality.adoc[`MeasurementValueQuality`]
| +++A MeasurementValue has a MeasurementValueQuality associated with it.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<RemoteSource,`RemoteSource`>>
| 0..1
| xref::class/RemoteSource.adoc[`RemoteSource`]
| +++Link to the physical telemetered point associated with this measurement.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<sensorAccuracy,`sensorAccuracy`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The limit, expressed as a percentage of the sensor maximum, that errors will not exceed when the sensor is used under  reference conditions.+++

| <<timeStamp,`timeStamp`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The time when the value was last updated.+++

| <<value,`value`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The value to supervise.+++

| <<BilateralToIOPoint,`BilateralToIOPoint`>>
| 0..*
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]
| +++Bilateral ICCP point for the measurement or control.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<ProcedureDataSet,`ProcedureDataSet`>>
| 0..*
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]
| +++Procedure data set that applies to this mesurement value.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#BilateralToIOPoint]
=== `BilateralToIOPoint`
+++Bilateral ICCP point for the measurement or control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IOPoint.BilateralToIOPoint`
| Cardinality
| 0..*
| Type
| xref::class/ProvidedBilateralPoint.adoc[`ProvidedBilateralPoint`]

| Inherited from
| xref::class/IOPoint.adoc[`IOPoint`]


|===

//[discrete]
[#CalculationMethodHierarchy]
=== `CalculationMethodHierarchy`


[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.CalculationMethodHierarchy`
| Cardinality
| 0..1
| Type
| xref::class/CalculationMethodHierarchy.adoc[`CalculationMethodHierarchy`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#coverageKind]
=== `coverageKind`
+++Code representing the coverage of the weather condition.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalCodedValue.coverageKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CoverageCodeKind.adoc[`CoverageCodeKind`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ErpPerson]
=== `ErpPerson`


[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.ErpPerson`
| Cardinality
| 0..1
| Type
| xref::class/OldPerson.adoc[`OldPerson`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#intensityKind]
=== `intensityKind`
+++Code representing the intensity of the weather condition.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalCodedValue.intensityKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/IntensityCodeKind.adoc[`IntensityCodeKind`]


|===

//[discrete]
[#IOPointSource]
=== `IOPointSource`
+++Local merasurement value source for an ICCP point.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IOPoint.IOPointSource`
| Cardinality
| 0..1
| Type
| xref::class/IOPointSource.adoc[`IOPointSource`]

| Inherited from
| xref::class/IOPoint.adoc[`IOPoint`]


|===

//[discrete]
[#MeasurementValueQuality]
=== `MeasurementValueQuality`
+++A MeasurementValue has a MeasurementValueQuality associated with it.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.MeasurementValueQuality`
| Cardinality
| 0..1
| Type
| xref::class/MeasurementValueQuality.adoc[`MeasurementValueQuality`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#MeasurementValueSource]
=== `MeasurementValueSource`
+++A reference to the type of source that updates the MeasurementValue, e.g. SCADA, CCLink, manual, etc. User conventions for the names of sources are contained in the introduction to IEC 61970-301.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.MeasurementValueSource`
| Cardinality
| 1
| Type
| xref::class/MeasurementValueSource.adoc[`MeasurementValueSource`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#probabilityPercent]
=== `probabilityPercent`
+++Probability of weather condition occurring during the time interval expressed as a percentage. Applicable only when weather condition is related to a forecast (not an observation).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalCodedValue.probabilityPercent`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

//[discrete]
[#ProcedureDataSet]
=== `ProcedureDataSet`
+++Procedure data set that applies to this mesurement value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.ProcedureDataSet`
| Cardinality
| 0..*
| Type
| xref::class/ProcedureDataSet.adoc[`ProcedureDataSet`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RemoteSource]
=== `RemoteSource`
+++Link to the physical telemetered point associated with this measurement.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.RemoteSource`
| Cardinality
| 0..1
| Type
| xref::class/RemoteSource.adoc[`RemoteSource`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#sensorAccuracy]
=== `sensorAccuracy`
+++The limit, expressed as a percentage of the sensor maximum, that errors will not exceed when the sensor is used under  reference conditions.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.sensorAccuracy`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#StringMeasurement]
=== `StringMeasurement`
+++Measurement to which this value is connected.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StringMeasurementValue.StringMeasurement`
| Cardinality
| 1
| Type
| xref::class/StringMeasurement.adoc[`StringMeasurement`]

| Inherited from
| xref::class/StringMeasurementValue.adoc[`StringMeasurementValue`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#timeStamp]
=== `timeStamp`
+++The time when the value was last updated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MeasurementValue.timeStamp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/MeasurementValue.adoc[`MeasurementValue`]


|===

//[discrete]
[#value]
=== `value`
+++The value to supervise.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:StringMeasurementValue.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/StringMeasurementValue.adoc[`StringMeasurementValue`]


|===

//[discrete]
[#weatherKind]
=== `weatherKind`
+++Code representing the type of weather condition.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalCodedValue.weatherKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WeatherCodeKind.adoc[`WeatherCodeKind`]


|===


